scripts/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-staging
  namespace: staging
  annotations:
    networking.gke.io/managed-certificates: grafana-staging-cert
spec:
  rules:
    - host: grafana.staging.internal.saas.unify.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-staging
                port:
                  number: 80
